[package]
name = "pi_cta_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
serde = { version = "1.0.203", features = ["derive"]}
env_logger = "0.11.3"
log = "0.4.21"
dotenv = "0.15.0"
